Slight optimization to surveyAnswer